--- a/Edukator.PresentationLayer/Views/Course/Index.cshtml
+++ b/Edukator.PresentationLayer/Views/Course/Index.cshtml
@@ -1,29 +1,39 @@
 ﻿@model List<Edukator.EntityLayer.Concrete.Course>
+
 @{
-    Layout = null;
+    Layout = "~/Views/AdminLayout/Index.cshtml";
 }
 
-<link href="~/lib/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />
-
-<table class="table table-bordered">
-    <tr>
-        <th>#</th>
-        <th>Başlık</th>
-        <th>Fiyat</th>
-        <th>Kategori</th>
-        <th>Sil</th>
-        <th>Güncelle</th>
-    </tr>
-    @foreach (var item in Model)
-    {
-        <tr>
-            <td>@item.CourseID</td>
-            <td>@item.Title</td>
-            <td>@item.Price</td>
-            <td>@item.CategoryID</td>
-            <td><a href="#" class="btn btn-outline-danger">Sil</a></td>
-            <td><a href="#" class="btn btn-outline-success">Güncelle</a></td>
-        </tr>
-    }
-</table>
-<a href="#" class="btn btn-outline-primary">Yeni Kurs Girişi</a>
+<div class="col-sm-12 col-xl-12">
+    <div class="bg-light rounded h-100 p-4">
+        <h6 class="mb-4">Kurs İşlemleri</h6>
+        <table class="table table-hover">
+            <thead>
+                <tr>
+                    <th scope="col">#</th>
+                    <th scope="col">Başlık</th>
+                    <th scope="col">Fiyat</th>
+                    <th scope="col">Kategori</th>
+                    <th scope="col">Sil</th>
+                    <th scope="col">Güncelle</th>
+                    <th scope="col">Kursa Git</th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var item in Model)
+                {
+                    <tr>
+                        <th scope="row">@item.CourseID</th>
+                        <td>@item.Title</td>
+                        <td>@item.Price ₺</td>
+                        <td>@item.Category.CategoryName</td>
+                        <td><a href="/Course/DeleteCourse/@item.CourseID" class="btn btn-outline-danger">Sil</a></td>
+                        <td><a href="/Course/UpdateCourse/@item.CourseID" class="btn btn-outline-success">Güncelle</a></td>
+                        <td><a href="#" class="btn btn-outline-dark">Kursa Git</a></td>
+                    </tr>
+                }
+            </tbody>
+        </table>
+        <a href="/Course/AddCourse/" class="btn btn-outline-primary">Yeni Kurs Girişi</a>
+    </div>
+</div>
