--- a/Edukator.PresentationLayer/Views/AdminLayout/PartialSidebar.cshtml
+++ b/Edukator.PresentationLayer/Views/AdminLayout/PartialSidebar.cshtml
@@ -18,7 +18,7 @@
             <a href="/Category/Index/" class="nav-item nav-link"><i class="fa fa-th me-2"></i>Kategoriler</a>
             <a href="/Course/Index/" class="nav-item nav-link"><i class="fa fa-keyboard me-2"></i>Kurslar</a>
             <a href="table.html" class="nav-item nav-link"><i class="fa fa-table me-2"></i>Öğrenciler</a>
-            <a href="chart.html" class="nav-item nav-link"><i class="fa fa-chart-bar me-2"></i>İstatistikler</a>
+            <a href="/Statistic/Index/" class="nav-item nav-link"><i class="fa fa-chart-bar me-2"></i>İstatistikler</a>
             <a href="chart.html" class="nav-item nav-link"><i class="fa fa-chart-bar me-2"></i>Mesajlar</a>
             <a href="chart.html" class="nav-item nav-link"><i class="fa fa-chart-bar me-2"></i>Grafikler</a>
             <a href="chart.html" class="nav-item nav-link"><i class="fa fa-chart-bar me-2"></i>Raporlar</a>
