--- a/Edukator.PresentationLayer/Views/Register/Index.cshtml
+++ b/Edukator.PresentationLayer/Views/Register/Index.cshtml
@@ -100,7 +100,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                                 <div class="clear"> </div>
                                 <label class="checkbox"><input type="checkbox" name="checkbox" checked><i></i>Kullanım şartlarını okudum <a href="#">Kabul ediyorum.</a></label>
                             </div>
-                            <div class="text-white" asp-validation-summary="ModelOnly"></div>
+                            <div style="color:red" asp-validation-summary="ModelOnly"></div>
                             <input type="submit" value="Kayıt Ol">
                         </form>
                     </div>
