--- a/Edukator.PresentationLayer/Views/Shared/Components/_CoursePartial/Default.cshtml
+++ b/Edukator.PresentationLayer/Views/Shared/Components/_CoursePartial/Default.cshtml
@@ -1,150 +1,111 @@
-﻿<section class="w3l-courses" id="courses">
+﻿@model List<Edukator.EntityLayer.Concrete.Course>
+<section class="w3l-courses" id="courses">
     <div class="blog py-5">
         <div class="container py-md-5 py-2">
-            <h5 class="title-subw3hny text-center">Featured Courses</h5>
-            <h3 class="title-w3l text-center">Popular <span class="inn-text">Courses</span></h3>
+            <h5 class="title-subw3hny text-center">Öne Çıkan Kurslar</h5>
+            <h3 class="title-w3l text-center">Populer <span class="inn-text">Kurslarımız</span></h3>
 
             <div class="row">
-                <div class="col-lg-3 col-md-6 item mt-5">
-                    <div class="card">
-                        <div class="card-header p-0 position-relative">
-                            <a href="#course-single" class="zoom d-block">
-                                <img class="card-img-bottom d-block" src="~/Edukator-Starter/assets/images/b1.jpg"
-                                     alt="Card image cap">
-                            </a>
-                            <div class="post-pos">
-                                <a href="#popular" class="receipe blue">Beginner</a>
-                                <a href="#popular" class="receipe yellow ml-2">New</a>
-                            </div>
-                        </div>
-                        <div class="card-body course-details">
-                            <div class="price-review d-flex justify-content-between mb-1align-items-center">
-                                <p>$53.00</p>
-                                <ul class="rating-star">
-                                    <li><span class="fas fa-star"></span></li>
-                                    <li><span class="fas fa-star"></span></li>
-                                    <li><span class="fas fa-star"></span></li>
-                                    <li><span class="fas fa-star"></span></li>
-                                    <li><span class="fas fa-star-o"></span></li>
-                                </ul>
-                            </div>
-                            <a href="#course-single" class="course-desc">
-                                The Essential Guide to Entrepreneurship
-                            </a>
-                            <div class="course-meta mt-4">
-                                <div class="meta-item course-lesson">
-                                    <span class="fas fa-users"></span>
-                                    <span class="meta-value"> 68 Students enrolled</span>
+
+                @foreach (var item in Model)
+                {
+                    <div class="col-lg-3 col-md-6 item mt-5">
+                        <div class="card">
+                            <div class="card-header p-0 position-relative">
+                                <a href="#course-single" class="zoom d-block">
+                                    <img class="card-img-bottom d-block" src="@item.ImageURL"
+                                         alt="Card image cap">
+                                </a>
+                                <div class="post-pos">
+                                    @if (item.Category.CategoryName == "Yazılım")
+                                    {
+                                        <a href="/Course/GetByCategory/@item.CategoryID" class="receipe blue">@item.Category.CategoryName</a>
+                                    }
+                                    @if (item.Category.CategoryName == "Spor")
+                                    {
+                                        <a href="/Course/GetByCategory/@item.CategoryID" class="receipe yellow ml-2">@item.Category.CategoryName</a>
+                                    }
+                                    @if (item.Category.CategoryName == "İngilizce")
+                                    {
+                                        <a href="/Course/GetByCategory/@item.CategoryID" class="receipe bg-primary">@item.Category.CategoryName</a>
+                                    }
+                                    @if (item.Category.CategoryName == "Tasarım")
+                                    {
+                                        <a href="/Course/GetByCategory/@item.CategoryID" class="receipe bg-info">@item.Category.CategoryName</a>
+                                    }
                                 </div>
                             </div>
-                        </div>
+                            <div class="card-body course-details">
+                                <div class="price-review d-flex justify-content-between mb-1align-items-center">
+                                    <p>₺ @item.Price</p>
 
-                    </div>
-                </div>
+                                    @if (item.Review == 1)
+                                    {
+                                        <ul class="rating-star">
+                                            <li><span class="fas fa-star"></span></li>
+                                            <li><span class="fas fa-star-o"></span></li>
+                                        </ul>
+                                    }
+                                    @if (item.Review == 2)
+                                    {
+                                        <ul class="rating-star">
+                                            <li><span class="fas fa-star"></span></li>
+                                            <li><span class="fas fa-star"></span></li>
+                                            <li><span class="fas fa-star-o"></span></li>
+                                        </ul>
+                                    }
+                                    @if (item.Review == 3)
+                                    {
+                                        <ul class="rating-star">
+                                            <li><span class="fas fa-star"></span></li>
+                                            <li><span class="fas fa-star"></span></li>
+                                            <li><span class="fas fa-star"></span></li>
+                                            <li><span class="fas fa-star-o"></span></li>
+                                        </ul>
+                                    }
+                                    @if (item.Review == 4)
+                                    {
+                                        <ul class="rating-star">
+                                            <li><span class="fas fa-star"></span></li>
+                                            <li><span class="fas fa-star"></span></li>
+                                            <li><span class="fas fa-star"></span></li>
+                                            <li><span class="fas fa-star"></span></li>
+                                            <li><span class="fas fa-star-o"></span></li>
+                                        </ul>
+                                    }
+                                    @if (item.Review == 5)
+                                    {
+                                        <ul class="rating-star">
+                                            <li><span class="fas fa-star"></span></li>
+                                            <li><span class="fas fa-star"></span></li>
+                                            <li><span class="fas fa-star"></span></li>
+                                            <li><span class="fas fa-star"></span></li>
+                                            <li><span class="fas fa-star"></span></li>
+                                            <li><span class="fas fa-star-o"></span></li>
+                                        </ul>
+                                    }
 
-                <div class="col-lg-3 col-md-6 item mt-5">
-                    <div class="card">
-                        <div class="card-header p-0 position-relative">
-                            <a href="#course-single" class="zoom d-block">
-                                <img class="card-img-bottom d-block" src="~/Edukator-Starter/assets/images/b2.jpg"
-                                     alt="Card image cap">
-                            </a>
-
-
-                        </div>
-                        <div class="card-body course-details">
-                            <div class="price-review d-flex justify-content-between mb-1align-items-center">
-                                <p>$70.00</p>
-                                <ul class="rating-star">
-                                    <li><span class="fas fa-star"></span></li>
-                                    <li><span class="fas fa-star"></span></li>
-                                    <li><span class="fas fa-star"></span></li>
-                                    <li><span class="fas fa-star"></span></li>
-                                    <li><span class="fas fa-star-o"></span></li>
-                                </ul>
-                            </div>
-                            <a href="#course-single" class="course-desc">Sounds True’s Freedom to Choose Different</a>
-                            <div class="course-meta mt-4">
-                                <div class="meta-item course-lesson">
-                                    <span class="fas fa-users"></span>
-                                    <span class="meta-value"> 44 Students enrolled</span>
+                                </div>
+                                <a href="#course-single" class="course-desc">
+                                    @item.Title
+                                </a>
+                                <div class="course-meta mt-4">
+                                    <div class="meta-item course-lesson">
+                                        <span class="fas fa-users"></span>
+                                        <span class="meta-value"> 0 Öğrenci Kaydoldu</span>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
 
-                    </div>
-                </div>
-
-                <div class="col-lg-3 col-md-6 item mt-5">
-                    <div class="card">
-                        <div class="card-header p-0 position-relative">
-                            <a href="#course-single" class="zoom d-block">
-                                <img class="card-img-bottom d-block" src="~/Edukator-Starter/assets/images/b3.jpg"
-                                     alt="Card image cap">
-                            </a>
-                            <div class="post-pos">
-                                <a href="#reciepe" class="receipe blue">Beginner</a>
-                                <a href="#popular" class="receipe yellow ml-2">Free</a>
-                            </div>
-                        </div>
-                        <div class="card-body course-details">
-                            <div class="price-review d-flex justify-content-between mb-1align-items-center">
-                                <p>$69.00</p>
-                                <ul class="rating-star">
-                                    <li><span class="fas fa-star"></span></li>
-                                    <li><span class="fas fa-star"></span></li>
-                                    <li><span class="fas fa-star"></span></li>
-                                    <li><span class="fas fa-star"></span></li>
-                                    <li><span class="fas fa-star-o"></span></li>
-                                </ul>
-                            </div>
-                            <a href="#course-single" class="course-desc">
-                                Learn Master JQuery in a Short Period of
-                                Time
-                            </a>
-                            <div class="course-meta mt-4">
-                                <div class="meta-item course-lesson">
-                                    <span class="fas fa-users"></span>
-                                    <span class="meta-value"> 74 Students enrolled</span>
-                                </div>
-                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="col-lg-3 col-md-6 item mt-5">
-                    <div class="card">
-                        <div class="card-header p-0 position-relative">
-                            <a href="#course-single" class="zoom d-block">
-                                <img class="card-img-bottom d-block" src="~/Edukator-Starter/assets/images/b4.jpg"
-                                     alt="Card image cap">
-                            </a>
+                }
 
 
-                        </div>
-                        <div class="card-body course-details">
-                            <div class="price-review d-flex justify-content-between mb-1align-items-center">
-                                <p>$90.00</p>
-                                <ul class="rating-star">
-                                    <li><span class="fas fa-star"></span></li>
-                                    <li><span class="fas fa-star"></span></li>
-                                    <li><span class="fas fa-star"></span></li>
-                                    <li><span class="fas fa-star"></span></li>
-                                    <li><span class="fas fa-star-o"></span></li>
-                                </ul>
-                            </div>
-                            <a href="#course-single" class="course-desc">Business Analysis: Working with Use Cases</a>
-                            <div class="course-meta mt-4">
-                                <div class="meta-item course-lesson">
-                                    <span class="fas fa-users"></span>
-                                    <span class="meta-value"> 64 Students enrolled</span>
-                                </div>
-                            </div>
-                        </div>
 
-                    </div>
-                </div>
+
                 <div class="mt-5 mx-auto text-more text-center pt-lg-4">
-                    <a href="courses.html" class="btn btn-style btn-primary">View All Courses</a>
+                    <a href="/Course/Index/" class="btn btn-style btn-primary">Tüm Kurslarımızı Görün</a>
                 </div>
             </div>
         </div>
