--- a/Edukator.PresentationLayer/Views/AdminLayout/PartialScript.cshtml
+++ b/Edukator.PresentationLayer/Views/AdminLayout/PartialScript.cshtml
@@ -9,4 +9,5 @@
 <script src="~/dashmin-1.0.0/lib/tempusdominus/js/tempusdominus-bootstrap-4.min.js"></script>
 
 <!-- Template Javascript -->
+@*<script src="~/dashmin-1.0.0/js/main.js"></script>*@
 <script src="~/dashmin-1.0.0/js/main.js"></script>
