--- a/Edukator.PresentationLayer/Views/AdminLayout/PartialSidebar.cshtml
+++ b/Edukator.PresentationLayer/Views/AdminLayout/PartialSidebar.cshtml
@@ -17,12 +17,13 @@
             <a href="/Dashboard/Index/" class="nav-item nav-link"><i class="fa fa-tachometer-alt me-2"></i>Dashboard</a>
             <a href="/Category/Index/" class="nav-item nav-link"><i class="fa fa-th me-2"></i>Kategoriler</a>
             <a href="/Course/Index/" class="nav-item nav-link"><i class="fa fa-keyboard me-2"></i>Kurslar</a>
-            <a href="table.html" class="nav-item nav-link"><i class="fa fa-table me-2"></i>Öğrenciler</a>
+            <a href="/Users/Index/" class="nav-item nav-link"><i class="fa fa-table me-2"></i>Öğrenciler</a>
             <a href="/Statistic/Index/" class="nav-item nav-link"><i class="fa fa-chart-bar me-2"></i>İstatistikler</a>
             <a href="chart.html" class="nav-item nav-link"><i class="fa fa-chart-bar me-2"></i>Mesajlar</a>
             <a href="chart.html" class="nav-item nav-link"><i class="fa fa-chart-bar me-2"></i>Grafikler</a>
             <a href="chart.html" class="nav-item nav-link"><i class="fa fa-chart-bar me-2"></i>Raporlar</a>
-            <a href="chart.html" class="nav-item nav-link"><i class="fa fa-chart-bar me-2"></i>Roller</a>
+            <a href="/Role/Index/" class="nav-item nav-link"><i class="fa fa-paint-roller me-2"></i>Roller</a>
+            <a href="/RoleAssign/Index/" class="nav-item nav-link"><i class="fa fa-car-alt me-2"></i>Rol Atama</a>
             <a href="chart.html" class="nav-item nav-link"><i class="fa fa-chart-bar me-2"></i>Ayarlar</a>
             <a href="/SocialMedia/Index/" class="nav-item nav-link"><i class="fa fa-comments me-2"></i>Sosyal Medya</a>
         </div>
