--- a/Edukator.PresentationLayer/Views/AdminLayout/PartialSidebar.cshtml
+++ b/Edukator.PresentationLayer/Views/AdminLayout/PartialSidebar.cshtml
@@ -24,7 +24,7 @@
             <a href="chart.html" class="nav-item nav-link"><i class="fa fa-chart-bar me-2"></i>Raporlar</a>
             <a href="/Role/Index/" class="nav-item nav-link"><i class="fa fa-paint-roller me-2"></i>Roller</a>
             <a href="/RoleAssign/Index/" class="nav-item nav-link"><i class="fa fa-car-alt me-2"></i>Rol Atama</a>
-            <a href="chart.html" class="nav-item nav-link"><i class="fa fa-chart-bar me-2"></i>Ayarlar</a>
+            <a href="/Settings/Index/" class="nav-item nav-link"><i class="fa fa-chart-bar me-2"></i>Ayarlar</a>
             <a href="/SocialMedia/Index/" class="nav-item nav-link"><i class="fa fa-comments me-2"></i>Sosyal Medya</a>
         </div>
     </nav>
