--- a/Edukator.PresentationLayer/Views/RoleAssign/UserRoleAssign.cshtml
+++ b/Edukator.PresentationLayer/Views/RoleAssign/UserRoleAssign.cshtml
@@ -1,8 +1,20 @@
-﻿
+﻿@model List<RoleAssignViewModel>
 @{
     ViewData["Title"] = "UserRoleAssign";
     Layout = "~/Views/AdminLayout/Index.cshtml";
 }
 
 <h1>Kullanıcı Rol Atama Sayfası</h1>
-
+<br />
+<form method="post">
+    @for (int i = 0; i < Model.Count; i++)
+    {
+        <div class="form-check">
+            <input type="hidden" asp-for="@Model[i].RoleID" />
+            <input type="hidden" asp-for="@Model[i].RoleName" />
+            <input type="checkbox" asp-for="@Model[i].RoleExist" class="form-check-input" />
+            <label class="form-check-label" for="@Model[i].RoleExist">@Model[i].RoleName</label>
+        </div>
+    }
+    <button class="btn btn-success">Rolleri Ata</button>
+</form>
